# Alpesh_Project_2014-16

EventsDivide/: oo.txt
EventsDivide/cuda/: CudaKernels.h
EventsDivide/eval/: SocketReader.cpp  SocketWriter.cpp  SocketWriter.h
InterfaceDivide/: CCM  Makefile  README.txt
InterfaceDivide/Results/: Attribute_cudaBF_0  Attribute_cudaBF_1  Attribute_cudaBF_2  Attribute_cudaBF_3  Attribute_cudaBF_4  Attribute_cudaBF_5  Attribute_cudaBF_6  Attribute_cudaBF_7  Attribute_cudaBF_8  Attribute_cudaBF_9  ConstraintsPerFilter_cudaBF_0  Default_cudaBF_0  Default_cudaBF_1  Default_cudaBF_2  Default_cudaBF_3  Default_cudaBF_4  Default_cudaBF_5  Default_cudaBF_6  Default_cudaBF_7  Default_cudaBF_8  Default_cudaBF_9  Zipf_cudaBF_0  Zipf_cudaBF_1  Zipf_cudaBF_2  Zipf_cudaBF_3
InterfaceDivide/common/: Consts.h
InterfaceDivide/cuda/: CudaKernels.cu  CudaKernels.h  CudaKernelsSimpleBloom.cu
InterfaceDivide/eval/: EvalRunner.cpp  FileWriter.cpp  ParamHandler.cpp  ParamHandler.h  SocketReader.h  WorkloadGenerator.cpp
LoadBalancing/: CCM  CCM.tgz  Main.cpp  README.txt  a.out  a.txt  b.txt  instruction.txt  main  main.cu  multiGPU2.cu  multigpu  ooo1.txt  p2pcopy.cu
LoadBalancing/common/: Timer.cpp  Translator.cpp
LoadBalancing/cuda/: CudaKernels.cu  CudaKernels.h
LoadBalancing/eval/: EvalRunner.cpp  FileReader.h  FileWriter.h
LoadBalancing/marshalling/: Unmarshaller.cpp  Unmarshaller.h
LoadBalancing/sff/siena/: types.h
MPI+CUDA Dessertation/: How to run mpi+cuda.docx
MPI+CUDA Dessertation/CCM/: .mpi_hostfile  CCM  Main.cpp  Makefile  out.txt
MPI+CUDA Dessertation/CCM/Results/: Attribute_cudaBF_0  Attribute_cudaBF_1  Attribute_cudaBF_2  Attribute_cudaBF_3  Attribute_cudaBF_4  Attribute_cudaBF_5  Attribute_cudaBF_6  Attribute_cudaBF_7  Attribute_cudaBF_8  Attribute_cudaBF_9  ConstraintsPerFilter_cudaBF_0  ConstraintsPerFilter_cudaBF_1  ConstraintsPerFilter_cudaBF_2  ConstraintsPerFilter_cudaBF_3  ConstraintsPerFilter_cudaBF_4  ConstraintsPerFilter_cudaBF_5  ConstraintsPerFilter_cudaBF_6  ConstraintsPerFilter_cudaBF_7  ConstraintsPerFilter_cudaBF_8  ConstraintsPerFilter_cudaBF_9  Default_cudaBF_0  Default_cudaBF_1  Default_cudaBF_2  Default_cudaBF_3  Default_cudaBF_4  Default_cudaBF_5  Default_cudaBF_6  Default_cudaBF_7  Default_cudaBF_8  Default_cudaBF_9  FiltersPerInterface_cudaBF_0  FiltersPerInterface_cudaBF_1  FiltersPerInterface_cudaBF_2  FiltersPerInterface_cudaBF_3  FiltersPerInterface_cudaBF_4  FiltersPerInterface_cudaBF_5  FiltersPerInterface_cudaBF_6  FiltersPerInterface_cudaBF_7  FiltersPerInterface_cudaBF_8  FiltersPerInterface_cudaBF_9  (+10 more)
MPI+CUDA Dessertation/CCM/cuda/: CudaKernels.cu  CudaKernels.h  CudaKernelsNoDup.cu
MPI+CUDA Dessertation/CCM/eval/: EvalRunner.cpp  EvalRunner.h  SocketReader.h  SystemEvalRunner.h
MultiGPU Dessertation/EventsDivide/: CCM  README.txt
MultiGPU Dessertation/EventsDivide/common/: Translator.cpp
MultiGPU Dessertation/EventsDivide/cuda/: CudaKernels.cu
MultiGPU Dessertation/EventsDivide/eval/: EvalRunner.cpp
MultiGPU Dessertation/EventsDivide/sff/: simple_fwd_types.h
MultiGpu(OnEvent)/CCM/: CCM  Main.cpp  Makefile
MultiGpu(OnEvent)/CCM/Results/: Default_cudaBF_0  Default_cudaBF_1  Default_cudaBF_2  Default_cudaBF_3  Default_cudaBF_4  Default_cudaBF_5  Default_cudaBF_6  Default_cudaBF_7  Default_cudaBF_8  Default_cudaBF_9
MultiGpu(OnEvent)/CCM/common/: Translator.h
MultiGpu(OnEvent)/CCM/cuda/: CudaKernels.cu  CudaKernelsBloom.cu
MultiGpu(OnEvent)/CCM/eval/: EvalRunner.cpp  FileReader.cpp  ParamHandler.cpp  SystemEvalRunner.cpp  WorkloadGenerator.h
MultiGpu(OnEvent)/CCM/marshalling/: Marshaller.h
MultiGpu(OnEvent)/CCM/sff/: simple_fwd_types.icc
original/CCM/: CCM  Main.cpp  Makefile
original/CCM/Results/: Attribute_cudaBF_0  ConstraintsPerFilter_cudaBF_0  Default_cudaBF_0  Default_cudaBF_1  Default_cudaBF_2  Default_cudaBF_3  Default_cudaBF_4  Default_cudaBF_5  Default_cudaBF_6  Default_cudaBF_7  Default_cudaBF_8  Default_cudaBF_9
original/CCM/common/: Timer.h
original/CCM/cuda/: CudaKernels.cu  CudaKernels.h  CudaKernelsBloom.h  CudaKernelsNoDup.h  CudaKernelsSimpleBloom.h  cudaTypes.h
original/CCM/eval/: EvalRunner.cpp  EvalRunner.h  SocketReader.h  SystemEvalRunner.cpp
original/CCM/sff/: types.cc
sff-2.0.1/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  a_index.cc  a_index.h  a_index.lo  acinclude.m4  aclocal.m4  allocator.cc  allocator.h  allocator.lo  attributes.cc  attributes.lo  attributes_encoding.h  b_predicate.h  b_table.cc  b_table.h  b_table.lo  bc_table.cc  bc_table.lo  bdd_table.cc  bdd_table.lo  bitvector.cc  bitvector.h  bitvector.icc  bitvector.lo  bloom_filter.h  bool_index.cc  bool_index.h  bool_index.lo  btrietable.cc  btrietable.lo  bv_table.cc  bv_table.lo  bx_table.cc  bx_table.lo  (+48 more)
sff-2.0.1/.deps/: a_index.Plo  allocator.Plo  attributes.Plo  b_table.Plo  bc_table.Plo  bdd_table.Plo  bitvector.Plo  bool_index.Plo  btrietable.Plo  bv_table.Plo  bx_table.Plo  counters_map.Plo  fwd_table.Plo  hash.Plo  pointers_set.Plo  sff.Po  sff_parser.Po  sff_scanner.Po  simple_attributes_types.Po  simple_tags_types.Po  string_index.Plo  t_table.Plo  timers.Plo  timing.Plo  zdd_table.Plo
sff-2.0.1/.libs/: libsff-2.so.0.0.1  libsff.la  libsff.lai  sff
sff-2.0.1/doc/: Makefile  Makefile.am  Makefile.in  antodoc.css  doxygen.conf  driver-attributes.input  driver-tags.input  footer.html  forwarding_messages.cc  header.html  header.html.in  maindoc.h  message_iteration.cc
sff-2.0.1/siena/: attributes.h  bctable.h  bddbtable.h  btable.h  btrietable.h  bvtable.h  bxtable.h  forwarding.h  fwdtable.h  tags.h  tagstable.h  ttable.h
sff-2.0.1/tests/: Makefile  Makefile.am  Makefile.in  any.sh  any1.good  any1.inp  any2.good  any2.inp  any3.good  any3.inp  any4.good  any4.inp  bloom_encoding.sh  bool.good  bool.inp  bool.sh  clear.sh  clear1.good  clear1.inp  clear2.good  clear2.inp  complete.inp  complete.sh  config.sh  eq.sh  eq1.good  eq1.inp  eq2.good  eq2.inp  eq3.good  eq3.inp  eq4.good  eq4.inp  eq5.good  eq5.inp  gt.sh  gt1.good  gt1.inp  gt2.good  gt2.inp  (+54 more)
(+1 files in other folders)
